--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,27 @@
 
 /* Header */
 
-.header-title {
+.page-title {
     text-align: center;
-
 }
-
-
 
 .header-image {
     width: 100%;
     height: 200px;
 }
 
-.dc-select-menu {
+/* Select menus */
+/* .dc-select-menu {
     text-align: center;
+} */
+
+a {
+    padding-left: 40px;
+    margin-left: 20px;
+    color: #000000;
+}
+
+.chart-title {
+    
+
 }
