--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,11 +10,30 @@
     height: 200px;
 }
 
+ /* Scrolling Reset button */
+ #myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 15px;
+    border: none;
+    outline: none;
+    background-color: #DA291C ;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  
+  #myBtn:hover {
+    background-color:#7C878E;
+  }
 
-a {
-    padding-left: 20px;
-    margin-left: 10px;
-    color: #DA291C;
+
+a { 
+    color:white;
 }
 
 select {
@@ -25,6 +44,7 @@ select {
 #year_select {
     padding-bottom: 20px;
 }
+
 /* Charts */
 
 .chart-title {
@@ -37,6 +57,9 @@ th {
     background-color: rgb(161, 167, 172);
 }
 
+  /* Data Table */
 
-
+  tr:nth-child(even){
+      background-color: #f2f2f2
+}
 
