--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,3 +63,24 @@ th {
       background-color: #f2f2f2
 }
 
+.data_table {
+    text-align: center;
+    
+}
+
+#pagination, #dataTable-div{
+    width: 100%;
+    text-align: center;
+    padding: 0 0 5px 0;
+  }
+
+  #dataTable {
+      text-align: center;
+      width:65%;
+      ##border: 1px solid black;
+  }
+
+ /* Media Queries */
+
+
+
