--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,11 +3,22 @@
 
 .page-title {
     text-align: center;
+    font-weight: bold;
 }
 
 .header-image {
     width: 100%;
     height: 200px;
+}
+
+/* Select drop down menu */
+select {
+    margin-left:20px;
+    border-color: #6ECEB2; 
+}
+
+#year_select {
+    padding-bottom: 20px;
 }
 
  /* Scrolling Reset button */
@@ -36,19 +47,12 @@ a {
     color:white;
 }
 
-select {
-    margin-left:20px;
-    border-color: #6ECEB2; 
-}
 
-#year_select {
-    padding-bottom: 20px;
-}
 
 /* Charts */
 
-.chart-title {
-   font-weight: bold; 
+h4.card-title {
+   font-weight: bold;
 }
 
 th {
