--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,25 +47,25 @@ a {
     color:white;
 }
 
-
-
 /* Charts */
 
 h4.card-title {
    font-weight: bold;
 }
 
-/* th {
-    font-size: 0.7em;
-    font-weight: bold;
-    background-color: rgb(161, 167, 172);
-} */
 
 .footer {
+    padding-top: 10px;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 0.9em;
+    font-weight: 700;
 }
 
+
+i.fab.fa-github {
+    color: black;
+    font-size: 30px;
+  }
 
  /* Media Queries */
 
